hphp/test/slow/type_annotation/type_annotation_classes3.php.expectf
Fatal error: when resolving type constant C::T, class NonExistentClass not found in %s on line 7
